--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -4,37 +4,34 @@
   display: flex;
   padding-top: 10px;
   padding-bottom: 10px;
-}
 
-h1 {
-  margin: 0px 30px 10px 0px;
-}
+  h1 {
+    margin: 0px 30px 10px 0px;
+    color: variables.$border-color;
+  }
 
-.top-navbar-nav {
-  display: flex;
-  align-items: center;
-  gap: 30px;
-}
+  .top-navbar-nav {
+    display: flex;
+    align-items: center;
+    gap: 30px;
 
-a {
-  vertical-align: center;
-  padding: 2px 6px 2px 6px;
-  outline: 1px solid variables.$border-color;
-  border-radius: 7px;
-  user-select: none;
-  text-decoration: none;
-  color: inherit;
-}
+    a {
+      vertical-align: center;
+      padding: 2px 6px 2px 6px;
+      outline: 1px solid variables.$border-color;
+      border-radius: 7px;
+      user-select: none;
+      text-decoration: none;
+      color: inherit;
+    }
 
-a:hover {
-  background-color: rgba(variables.$border-color, 0.2);
-  cursor: pointer;
-}
+    a:hover {
+      background-color: rgba(variables.$border-color, 0.2);
+      cursor: pointer;
+    }
 
-a:active {
-  background-color: rgba(variables.$border-color, 0.5);
-}
-
-h1 {
-  color: variables.$border-color;
+    a:active {
+      background-color: rgba(variables.$border-color, 0.5);
+    }
+  }
 }
